--- a/estilos/style.css
+++ b/estilos/style.css
@@ -164,3 +164,27 @@ select{
     padding: 10px 10px;
     font-size: 20px;
 }
+/*CSS para el index*/
+.banner{
+    width: 100%;
+}
+
+.titulo-principal{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+}
+
+.principal p{
+    margin: 0 0 1em;
+}
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em{
+    font-style: italic;
+}
+.imagenDiferencial{
+    width: 60%;
+}
