--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 header {
 
     background-color: #BBB;
@@ -173,6 +176,7 @@ select{
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
+    clear: left;
 }
 
 .principal p{
@@ -185,6 +189,29 @@ select{
 .principal em{
     font-style: italic;
 }
+
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+    
+}
+
+.map{
+    padding: 3em 0;
+}
+.map p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+.contenido-diferenciales{
+    width: 640px;
+}
 .imagenDiferencial{
     width: 60%;
 }
+.video{
+    width: 560px;
+    margin: 1em auto;
+}
+
